New version with multi-device activity example + using new iWSlib version (0.99.1)
Signed-off-by: Matthias Stevens <matthias.stevens@iminds.be>

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,16 +1,25 @@
 <resources>
     <string name="app_name">imec Wearable Streaming library example app</string>
-    <string name="deviceType">Select device type:</string>
+    <string name="simple_activity_name">iWSlib Simple example</string>
+    <string name="multi_device_activity_name">iWSlib Multi-device example</string>
+    <string name="select_device_type">Select device type:</string>
     <string name="chillband">Chillband</string>
     <string name="stingray">Stingray</string>
-    <string name="findAndStream">Find device &amp; Start stream</string>
-    <string name="stopSteam">Stop stream</string>
+    <string name="chillband_short">CB</string>
+    <string name="stingray_short">SR</string>
+    <string name="find_and_stream">Find device &amp; Start stream</string>
+    <string name="stop_stream">Stop stream</string>
     <string name="scanning_for">Scanning for %1$s. Please tap on the device to make it discoverable.</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="streamConfirmation">Found Bluetooth device \"%1$s\" (MAC: %2$s). Is this the %3$s you intend to stream from?</string>
-    <string name="alsoEndDataCollection">Do you also which to end on-device data collection?</string>
-    <string name="status">Currently %1$s; Received %2$d readings; Battery level %3$d%%.</string>
+    <string name="stream_confirmation">Found Bluetooth device \"%1$s\" (MAC: %2$s). Is this the %3$s you intend to stream from?</string>
+    <string name="also_end_data_collection">Do you also which to end on-device data collection?</string>
+    <string name="status_msg">Currently %1$s; Received %2$d readings; Battery level %3$d%%.</string>
     <string name="connected">connected</string>
     <string name="disconnected">disconnected</string>
+    <string name="na">n/a</string>
+
+    <string name="macs">Device MAC addresses:</string>
+    <string name="start_streams">Start streams</string>
+    <string name="stop_streams">Stop streams</string>
 </resources>
